# dalvik

./: Cargo.toml  README.md
dalvikcommon/: Cargo.toml
dalvikcommon/src/: bytes_buffer.rs  dalvik_common_error.rs  leb128.rs  lib.rs  vec_reader.rs
dalvikdex/: Cargo.toml
dalvikdex/src/: dex.rs  dex_access_flags.rs  dex_class.rs  dex_field.rs  dex_field_id.rs  dex_method.rs  dex_method_id.rs  dex_proto_id.rs  lib.rs
dalvikinst/: Cargo.toml
dalvikinst/src/: const.rs  const_string.rs  dalvik_inst_error.rs  dalvik_instruction.rs  dalvik_instruction_decoder.rs  invoke_common.rs  invoke_direct.rs  invoke_virtual.rs  lib.rs  move.rs  move_from_16.rs  new_instance.rs  return.rs  return_void.rs  sget_object.rs
dalvikruntime/: Cargo.toml
dalvikruntime/src/: java_io_printstream.rs  java_lang_system.rs  lib.rs
dalvikvm/: Cargo.toml
dalvikvm/src/: dalvik_class.rs  dalvik_object.rs  dalvik_vm.rs  lib.rs
src/: main.rs
